examples/create_secret_mount_into_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secret-pod
  name: secret-pod
  namespace: secret
spec:
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
  containers:
  - args:
    - sh
    - -c
    - sleep 5d
    image: busybox:1.31.1
    name: secret-pod
    resources: {}
    volumeMounts:
    - name: secret1
      mountPath: /tmp/secret1
      readOnly: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: secret1
    secret:
      secretName: secret1
status: {}

## Verify
#
# $ k -n secret exec secret-pod -- env | grep APP
# APP_USER=user1
# APP_PASS=1234
#
# k -n secret exec secret-pod -- find /tmp/secret1
# /tmp/secret1
# /tmp/secret1/..data
# /tmp/secret1/halt
# /tmp/secret1/..2022_05_30_19_55_44.169428471
# /tmp/secret1/..2022_05_30_19_55_44.169428471/halt
# 
# $ k -n secret exec secret-pod -- cat /tmp/secret1/halt
# Mon May 30 12:52:10 PM PDT 2022
