examples/pod-init-containers.yaml
# Create a pod with an nginx container exposed on port 80. 
# Add a busybox init container which downloads a page using "wget -O /work-dir/index.html http://neverssl.com/online". 
# Make a volume of type emptyDir and mount it in both containers. 
# For the nginx container, mount it on "/usr/share/nginx/html" and for the initcontainer, mount it on "/work-dir". 
# When done, get the IP of the created pod and create a busybox pod and run "wget -O- IP"

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  name: web
spec:
  containers:
  - image: nginx
    name: web
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /usr/share/nginx/html
  volumes:
  - name: vol
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}

# $ k get po -o wide
# NAME   READY   STATUS    RESTARTS   AGE   IP            NODE                      NOMINATED NODE   READINESS GATES
# web    1/1     Running   0          64s   10.244.1.21   kind-multi-node-worker2   <none>           <none>
#
# $ k run box-test --image=busybox --restart=Never -it --rm -- /bin/sh -c "wget -O- 10.244.1.21"
# Connecting to 10.244.1.21 (10.244.1.21:80)
# writing to stdout
# <html>
# 	<head>
# 		<title>NeverSSL - helping you get online</title>
# .....
