examples/private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: gengwg/cheers2019:latest
  imagePullSecrets:
  - name: regcred
