examples/networkpolicy-allow-labels.yaml
# Create an nginx deployment of 2 replicas, expose it via a ClusterIP service on port 80. 
# Create a NetworkPolicy so that only pods with labels 'access: granted' can access the deployment and apply it
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted

# kubectl create deployment nginx --image=nginx --replicas=2
# kubectl expose deployment nginx --port=80

# Check if the Network Policy has been created correctly
# make sure that your cluster's network provider supports Network Policy (https://kubernetes.io/docs/tasks/administer-cluster/declare-network-policy/#before-you-begin)
#
# kubectl run busybox --image=busybox --rm -it --restart=Never -- wget -O- http://nginx:80 --timeout 2                          # This should not work. --timeout is optional here. But it helps to get answer more quickly (in seconds vs minutes)
#
# kubectl run busybox --image=busybox --rm -it --restart=Never --labels=access=granted -- wget -O- http://nginx:80 --timeout 2  # This should be fine
