examples/networkpolicy.yaml
# Question 24 | NetworkPolicy
#
# create a NetworkPolicy called np-backend in Namespace project-snake. It should allow the backend-* Pods only to:

#    connect to db1-* Pods on port 1111
#    connect to db2-* Pods on port 2222

# After implementation, connections from backend-* Pods to vault-* Pods on port 3333 should for example no longer work.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  #namespace: project-snake
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress                    # policy is only about Egress
  egress:
    -                           # first rule
      to:                           # first condition "to"
      - podSelector:
          matchLabels:
            app: db1
      ports:                        # second condition "port"
      - protocol: TCP
        port: 1111
    -                           # second rule
      to:                           # first condition "to"
      - podSelector:
          matchLabels:
            app: db2
      ports:                        # second condition "port"
      - protocol: TCP
        port: 2222

# allow outgoing traffic if:
#  (destination pod has label app=db1 AND port is 1111)
#  OR
#  (destination pod has label app=db2 AND port is 2222)
